@@ -9,15 +9,15 @@ import org.junit.jupiter.api.parallel.ExecutionMode;
 public class ParallelTest {
     @Test
     void testMethod1() throws InterruptedException {
-        System.out.println("Test Method First Start =>"+ Thread.currentThread().threadId());
+        System.out.println("Test Method First Start =>"+ Thread.currentThread().getId());
         Thread.sleep(5000);
-        System.out.println("Test Method First End =>"+ Thread.currentThread().threadId());
+        System.out.println("Test Method First End =>"+ Thread.currentThread().getId());
     }
 
     @Test
     void testMethod2() throws InterruptedException {
-        System.out.println("Test Method Second Start =>"+ Thread.currentThread().threadId());
+        System.out.println("Test Method Second Start =>"+ Thread.currentThread().getId());
         Thread.sleep(5000);
-        System.out.println("Test Method Second End =>"+ Thread.currentThread().threadId());
+        System.out.println("Test Method Second End =>"+ Thread.currentThread().getId());
     }
 }
